# mill-opengl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  ZW1-Mlyn.sublime-project  ZW1-Mlyn.sublime-workspace
app/: CMakeLists.txt
app/res/: Box.fsh  Box.vsh  Rectangle.fsh  Triangle.fsh  Triangle.vsh  main.fsh  main.vsh
app/src/: Rectangle.cpp  Rectangle.hpp  Triangle.cpp  Triangle.hpp  main.cpp
gkom/: CMakeLists.txt
gkom/include/gkom/: Application.hpp  Box.hpp  Camera.hpp  Context.hpp  Material.hpp  Mesh.hpp  Object.hpp  Scene.hpp  Shape.hpp  Window.hpp  World.hpp
gkom/include/gkom/detail/: WindowsRegistry.hpp
gkom/include/gkom/geometry/: Box.hpp  Pyramid.hpp
gkom/src/: Application.cpp  Box.cpp  Camera.cpp  Context.cpp  Mesh.cpp  Scene.cpp  Window.cpp  World.cpp
gkom/src/detail/: WindowsRegistry.cpp
gkom/src/geometry/: Box.cpp  Pyramid.cpp
gl-cpp/: CMakeLists.txt
gl-cpp/include/gl/: Attribute.hpp  ElementBuffer.hpp  FragmentShader.hpp  Program.hpp  Shader.hpp  Texture2D.hpp  Uniform.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexShader.hpp  gl.hpp  glew.hpp
gl-cpp/src/: gl.cpp  glew.cpp
glfw-cpp/: CMakeLists.txt
glfw-cpp/include/glfw/: Application.hpp  Context.hpp  Renderer.hpp  Size.hpp  Window.hpp  glfw.hpp
glfw-cpp/include/glfw/detail/: WindowsRegistry.hpp
glfw-cpp/src/: Application.cpp  Context.cpp  Window.cpp  glfw.cpp
glfw-cpp/src/detail/: WindowsRegistry.cpp
include/gkom/: BoxFactory.hpp  Camera.hpp  Color.hpp  ColorFactory.hpp  ConeFactory.hpp  CylinderFactory.hpp  Entity.hpp  Event.hpp  Geometry.hpp  GeometryManager.hpp  GraphicsManager.hpp  IndexBuffer.hpp  Light.hpp  LightFactory.hpp  LightManager.hpp  Logging.hpp  Material.hpp  MaterialsFactory.hpp  Mesh.hpp  Node.hpp  PrismFactory.hpp  PyramidFactory.hpp  Renderer.hpp  Scene.hpp  SceneNode.hpp  Shader.hpp  ShaderLoader.hpp  ShaderProgram.hpp  ShapesFactory.hpp  Size.hpp  SphereFactory.hpp  Texture.hpp  TextureLoader.hpp  Transform.hpp  TransformManager.hpp  Uniform.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp  (+1 more)
res/: CMakeLists.txt  fragment_base.glsl  gl_04.frag  gl_04.vert  vertex_base.glsl  vertex_color.glsl
src/: CMakeLists.txt  main.cpp  shprogram.cpp  shprogram.h
src/gkom/: BoxFactory.cpp  Camera.cpp  Color.cpp  ColorFactory.cpp  ConeFactory.cpp  Geometry.cpp  GeometryManager.cpp  GraphicsManager.cpp  IndexBuffer.cpp  LightFactory.cpp  LightManager.cpp  Logging.cpp  MaterialsFactory.cpp  PrismFactory.cpp  PyramidFactory.cpp  Renderer.cpp  Scene.cpp  SceneNode.cpp  Shader.cpp  ShaderLoader.cpp  ShaderProgram.cpp  ShapesFactory.cpp  Texture.cpp  TextureLoader.cpp  Transform.cpp  TransformManager.cpp  Uniform.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  World.cpp
submodules/: CMakeLists.txt
util/: CMakeLists.txt
util/include/util/: final_action.hpp
